added meta tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+    <meta name="title" content="Voice To Letter">
+    <meta name="description" content="A Speech-to-Text Web App powered by a Speech Recognition API, inspired by the Beautiful Handwritten Letters company in the movie HER.">
+    <meta name="author" content="Miracle Justice">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://voicetoletter.netlify.app/">
+    <meta property="og:title" content="The Hour Countdown">
+    <meta property="og:description" content="A Speech-to-Text Web App powered by a Speech Recognition API, inspired by the Beautiful Handwritten Letters company in the movie HER.">
+    <meta property="og:image" content="https://voicetoletter.netlify.app/assets/desktop.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="voicetoletter.netlify.app">
+    <meta property="twitter:url" content="https://voicetoletter.netlify.app/">
+    <meta name="twitter:title" content="Voice To Letter">
+    <meta name="twitter:description" content="A Speech-to-Text Web App powered by a Speech Recognition API, inspired by the Beautiful Handwritten Letters company in the movie HER.">
+    <meta name="twitter:image" content="https://voicetoletter.netlify.app/assets/desktop.png">
 </head>
 <body>
 <header>
