updated meta tags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://voicetoletter.netlify.app/">
-    <meta property="og:title" content="The Hour Countdown">
+    <meta property="og:title" content="Voice To Letter">
     <meta property="og:description" content="A Speech-to-Text Web App powered by a Speech Recognition API, inspired by the Beautiful Handwritten Letters company in the movie HER.">
     <meta property="og:image" content="https://voicetoletter.netlify.app/assets/desktop.png">
 
