--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VoiceToLetter</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="canonical" href="https://voicetoletter.netlify.app/">
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
@@ -18,9 +20,10 @@
     <meta property="og:title" content="Voice To Letter">
     <meta property="og:description" content="A Speech-to-Text Web App powered by a Speech Recognition API, inspired by the Beautiful Handwritten Letters company in the movie HER.">
     <meta property="og:image" content="https://voicetoletter.netlify.app/assets/desktop.png">
-
+  
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@MiracleJustice_">
     <meta property="twitter:domain" content="voicetoletter.netlify.app">
     <meta property="twitter:url" content="https://voicetoletter.netlify.app/">
     <meta name="twitter:title" content="Voice To Letter">
