--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta name="title" content="Voice To Letter">
     <meta name="description" content="A Speech-to-Text Web App powered by a Speech Recognition API, inspired by the Beautiful Handwritten Letters company in the movie HER.">
     <meta name="author" content="Miracle Justice">
+    <meta name="robots" content="index, follow">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
